tests/ui/const-generics/issues/issue-67945-2.min.stderr
error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/issue-67945-2.rs:9:27
   |
LL |         let x: Option<Box<Self>> = None;
   |                           ^^^^

error: aborting due to 1 previous error

